added sagemaker env vars

--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,3 @@
 GEMINI_API_KEY='AIzaSyBVu-q-VRTnXbyrUIO53pKu0Ru7y4mjPUc'
+SAGE_MAKER_DOMAIN='domain-03-17-2025-105332'
+SAGE_MAKER_STUDIO_URL='https://dzd_4c3pyiq6tvphwp.sagemaker.us-east-2.on.aws/'
